# Deadlock-Twitch-Bot

./: .gitignore  CHANGELOG.md  INDEX.md  README.md  SECURITY.md  WORKFLOW.md  pyproject.toml  rechnung-vorschau.html
.github/: dependabot.yml  requirements-test-ci-locked.txt  requirements-tools-locked.txt
bot/: __init__.py  base.py  cog.py  logging_setup.py  promo_mode.py  reload_manager.py  reload_mixin.py  runtime_bootstrap.py  runtime_security.py  runtime_state.py  secret_store.py
docs/: ADMIN.md  API.md  ARCHITECTURE.md  BOT_TOKEN_SCOPES.md  DATABASE.md  LEGAL_ACCESS_GATE.md  LURKER_TAX.md  MODULES.md  STREAMER.md  VIEWER_PRESENCE_TIMELINE.md  admin_user_surface_audit_2026-03-05.md  external-recruitment-blacklist.md
features/: PROJ-1-partner-raid-score-cache.md
ops/: PG_DSN_ROTATION.md  deadlock-twitch-pg-dsn-rotation.service  deadlock-twitch-pg-dsn-rotation.timer  pentest-rate-limit-disable-2026-04-27.md  runbook-split-runtime.md
scripts/: check-local.sh  export_infisical_env.py  export_legal_preview.py  local-security-scan.sh  preview_legal_pages.py  rotate_twitch_pg_dsn.py  rotate_twitch_pg_dsn_scheduled.sh  run_twitch_bot_service.sh  run_twitch_dashboard_service.sh  set_stripe_vault.py  setup_stripe_webhook.py  stripe_add_new_plans.py  stripe_update_bundle_prices.py  stripe_update_vault.py  test_checkout.py  update_stripe_prices.py
tests/: conftest.py  eventsub_state_store_test_helpers.py  sqlite_twitch_schema.py  test_admin_streamers_dedup.py  test_affiliate_api_fixes.py  test_affiliate_commission_processing.py  test_affiliate_gutschriften.py  test_affiliate_pii.py  test_affiliate_portal_assets.py  test_affiliate_session_lookup.py  test_affiliate_state_store.py  test_affiliate_stripe_connect.py  test_analytics_api_result_compat.py  test_analytics_performance_pg_only.py  test_analytics_public_api.py  test_analytics_regressions.py  test_async_db_offloading_regressions.py  test_billing_helpers.py  test_billing_security.py  test_bot_service_app.py  test_candidate_selection.py  test_chat_bot_irc_lurker_experiment.py  test_chat_bot_periodic_join_task.py  test_chat_lurker_tax.py  test_chat_memory_pruning.py  test_chat_message_blacklist.py  test_chat_notification_raid_confirmation.py  test_chat_promo_override.py  test_chat_transport_restart.py  test_chatters_bot_fallback.py  test_dashboard_admin_announcement_mode.py  test_dashboard_auth_oauth_state_binding.py  test_dashboard_auth_persistence.py  test_dashboard_eventsub_bridge_runtime.py  test_dashboard_eventsub_bridge_store.py  (+135 more)
(+483 files in other folders)
