[project]
name = "twitch-cog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.40",
    "discord.py>=2.3",
    "fpdf2>=2.8.7",
    "keyring>=25.7.0",
    "openai>=1.0",
    "psycopg[binary]>=3.1",
    "stripe>=11",
]

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.13.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "twitchio>=3.2.1",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["twitch_cog"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "twitch_cog*"]
