[project]
name = "twitch-cog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.101.0",
    "cryptography>=48.0.0",
    "discord.py>=2.7.1",
    "fpdf2>=2.8.7",
    "keyring>=25.7.0",
    "openai>=2.36.0",
    "psycopg[binary]>=3.3.4",
    "stripe>=15.1.0",
]

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.14.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "twitchio>=3.2.2",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["twitch_cog"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "twitch_cog*"]
